# ros2_hik_camera

./: CMakeLists.txt
config/: camera_info.yaml  camera_params.yaml
launch/: hik_camera.launch.py
src/: hik_camera_node.cpp
